--- a/FRONT-END/Html/Sobre nos/Sobre.html
+++ b/FRONT-END/Html/Sobre nos/Sobre.html
@@ -23,9 +23,9 @@
         <!--Iniciando os icones na tela-->
         <nav class="navbar">
             <a href="../index.html" target="_self">Home</a>
-            <a href="Sobre nos/Sobre.html" target="_self">Saiba Mais</a>
-            <a href="Loja/Loja.html" target="_self">Loja</a>
-            <a href="Compra/Compra.html" target="_self">Compra </a>
+            <a href="Sobre.html" target="_self">Saiba Mais</a>
+            <a href="../Loja/Loja.html" target="_self">Loja</a>
+            <a href="../Compra/Compra.html" target="_self">Compra </a>
             <a href="#Login" target="_self">Login </a>
 
         </nav>
@@ -57,16 +57,17 @@
    <!--Inciando Sobre nós-->
    <section class="sobre" id="sobre">
     <h1 class="info"> <span> Sobre mais</span></h1>
-    <div class="row">
+    <div class="row-1">
 
         <div class="imagem">
-            <img src="img/monitor.png" x alt="">
+            <img src="../img/logo.png" x alt="">
         </div>
 
 
 
         <div class="content">
-            <h3>JKR O QUE É?</h3>
+            
+            <h3>JKR O QUE É ?</h3>
             <p>A loja JKR é uma loja especializada na venda de computadores e produtos relacionados. Seu foco está
                 em oferecer uma ampla variedade de computadores, laptops, periféricos, componentes e acessórios para
                 atender às necessidades de diversos tipos de clientes,</p>
@@ -81,13 +82,13 @@
     <div class="row-1">
 
         <div class="imagem">
-            <img src="img/logo.png" alt="">
+            <img src="../img/setup.jpg" alt="">
         </div>
 
 
 
         <div class="content">
-            <h3>Por que escolher a JKR Computadores?</h3>
+            <h3>Por que escolher a JKR Computadores ?</h3>
             <p>Somos uma empresa com mais de 10 anos de experiência no mercado de informática.
                 Oferecemos uma ampla variedade de produtos e serviços para atender às necessidades de todos os
                 clientes.
@@ -98,10 +99,10 @@
         </div>
     </div>
 
-    <div class="row-2">
+    <div class="row-1">
 
         <div class="imagem">
-            <img src="img/logo.png" alt="">
+            <img src="../img/upgrade.jpg" alt="">
         </div>
 
 
@@ -113,7 +114,7 @@
                Buscamos oferecer um atendimento personalizado e de alta qualidade, para
                 que cada cliente se sinta único e especial.
                 Estamos sempre atentos às últimas novidades do mercado, para oferecer aos nossos
-                clientes as melhores soluções em informática.p>
+                clientes as melhores soluções em informática.</p>
                
         </div>
     </div>
