--- a/FRONT-END/Html/index.html
+++ b/FRONT-END/Html/index.html
@@ -27,8 +27,7 @@
             <a href="Sobre nos/Sobre.html" target="_self">Saiba Mais</a>
             <a href="Loja/Loja.html" target="_self">Loja</a>
             <a href="Compra/Compra.html" target="_self">Compra </a>
-            <a href="Login/Login.html" target="_self">Login </a>
-            <a href="Cadastro/Cadastro.html" target="_self">Cadastro </a>
+            <a href="#Login" target="_self">Login </a>
 
         </nav>
         <div class="icons">
