linkando carrinho com backend

--- a/Projeto_PI_Novo/FRONT-END/Html/Loja/Loja.html
+++ b/Projeto_PI_Novo/FRONT-END/Html/Loja/Loja.html
@@ -47,42 +47,10 @@
 
         <!--incio de items no carrinho -->
         <div class="cart-items-container">
-            <div class="cart-item">
-                <span class="fas fa-times"></span>
-                <img src="img/product-1.jpeg" alt=""> <!--Carrinho Icon-->
-                <div class="content">
-                    <h3>item obj 1 </h3>
-                    <div class="price"> R$ 1400,00</div>
-                </div>
-            </div>
 
-            <div class="cart-item">
-                <span class="fas fa-times"></span>
-                <img src="img/product-2.jpeg" alt=""> <!--Carrinho Icon-->
-                <div class="content">
-                    <h3>item obj 1 </h3>
-                    <div class="price"> R$ 1200,00</div>
-                </div>
-            </div>
-
-            <div class="cart-item">
-                <span class="fas fa-times"></span>
-                <img src="img/product-10.jpeg" alt=""> <!--Carrinho Icon-->
-                <div class="content">
-                    <h3>item obj 1 </h3>
-                    <div class="price"> R$ 1100,00</div>
-                </div>
-            </div>
-            <div class="cart-item">
-                <span class="fas fa-times"></span>
-                <img src="img/product-9.jpeg" alt=""> <!--Carrinho Icon-->
-                <div class="content">
-                    <h3>item obj 1 </h3>
-                    <div class="price"> R$ 1400,00</div>
-                </div>
-            </div>
-            <a href="#" class="btn"> Comprar </a> </a>
+            <a href="../Carrinho/Carrinho.html" class="btn"> Finalizar Carrinho </a> </a>
         </div>
+
         <!--incio de items no carrinho -->
 
     </header>
