--- a/Projeto_PI_Novo/FRONT-END/Html/Sobre nos/Sobre.html
+++ b/Projeto_PI_Novo/FRONT-END/Html/Sobre nos/Sobre.html
@@ -25,7 +25,7 @@
             <a href="../index.html" target="_self">Home</a>
             <a href="Sobre.html" target="_self">Saiba Mais</a>
             <a href="../Loja/Loja.html" target="_self">Loja</a>
-            <a href="../Compra/Compra.html" target="_self">Compra </a>
+            <a href="../Cadastro/Cadastro.html" target="_self">Cadastro </a>
             <a href="#Login" target="_self">Login </a>
 
         </nav>
