--- a/Projeto_PI_Novo/FRONT-END/Html/Loja/Loja.html
+++ b/Projeto_PI_Novo/FRONT-END/Html/Loja/Loja.html
@@ -26,8 +26,8 @@
             <a href="../index.html" target="_self">Home</a>
             <a href="../Sobre nos/Sobre.html" target="_self">Saiba Mais</a>
             <a href="Loja.html" target="_self">Loja</a>
-            <a href="#Cadastrar" target="_self">Register </a>
-            <a href="#Login" target="_self">Login </a>
+            <a href="../Cadastro/Cadastro.html" target="_self">Cadastro </a>
+            <a href="../Login/Login.html" target="_self">Login </a>
 
         </nav>
         <div class="icons">
