--- a/Projeto_PI_Novo/FRONT-END/Html/Carrinho/Carrinho.html
+++ b/Projeto_PI_Novo/FRONT-END/Html/Carrinho/Carrinho.html
@@ -11,7 +11,7 @@
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
-  <body onload="carregarProdutos()">
+  <body onload="renderizarProdutos()">
 
 
     
@@ -38,7 +38,7 @@
 
         <!--CAMPO DE BUSCA-->
         <div class="search-form">
-            <input type="search" id="search-box" placeholder="Busca aqui">
+            <input type="search" id="search-box" placeholder="Busca aqui" >
             <label for="search-box" class="fas fa-search"></label>
         </div>
         <!--FIM DO CAMPO DE BUSCA-->
@@ -83,7 +83,7 @@
             </div>
             <footer>
               <span>Total</span>
-              <span>R$ 418</span>
+              <span class="totalPrice">R$ 418</span>
             </footer>
           </div>
           <button>Finalizar Compra</button>
